// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Index /> matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-8kvyam"
  >
    <h1>
      About
    </h1>
    <div
      class="css-1cwnpiq"
    >
      Test your knowledge of the NPM ecosystem by guessing the number of dependencies for popular NPM packages.
    </div>
    <div
      class="css-8a5j6a"
    >
      <button
        class="css-1w798tj"
      >
        Start
      </button>
    </div>
    <div
      class="css-khmwet"
      style="margin: 2rem 0px;"
    />
    <h2
      class="css-1f03z8l-FaqHeading"
    >
      FAQ
    </h2>
    <div
      class="css-v3jkj-Faq"
      tabindex="0"
    >
      <h2
        class="css-1f03z8l-FaqHeading"
      >
        <span
          style="cursor: pointer;"
        >
          <span
            class="css-swfxel-Faq"
          >
            <div
              class="codicon codicon-chevron-right"
            />
          </span>
           How is the dependency count calculated?
        </span>
      </h2>
      <div
        class="css-osfowl-Faq"
        style="display: none;"
      >
        As the dependency tree is traversed, each dependency from the dependencies field in the package.json is resolved according to their range and added to the overall count. 
        <span
          class="css-rg74v9"
        >
          It's a straight accumulation
        </span>
        , as such the same package is counted multiple times if it is a dependency of other packages.
      </div>
    </div>
    <div
      class="css-v3jkj-Faq"
      tabindex="0"
    >
      <h2
        class="css-1f03z8l-FaqHeading"
      >
        <span
          style="cursor: pointer;"
        >
          <span
            class="css-swfxel-Faq"
          >
            <div
              class="codicon codicon-chevron-right"
            />
          </span>
           How is the distinct dependency count calculated?
        </span>
      </h2>
      <div
        class="css-osfowl-Faq"
        style="display: none;"
      >
        A dependency is distinct if after resolving it according to their range differs in name and version.
        <br />
        <span
          class="css-rg74v9"
        >
          Multiple same version dependencies will only be counted once.
        </span>
      </div>
    </div>
    <div
      class="css-v3jkj-Faq"
      tabindex="0"
    >
      <h2
        class="css-1f03z8l-FaqHeading"
      >
        <span
          style="cursor: pointer;"
        >
          <span
            class="css-swfxel-Faq"
          >
            <div
              class="codicon codicon-chevron-right"
            />
          </span>
           Is there an overview page?
        </span>
      </h2>
      <div
        class="css-osfowl-Faq"
        style="display: none;"
      >
        All available packages can be found on the 
        <a
          class="css-1ka21sq"
          href="/overview"
          target="_blank"
        >
          overview page
        </a>
      </div>
    </div>
    <div
      class="css-v3jkj-Faq"
      tabindex="0"
    >
      <h2
        class="css-1f03z8l-FaqHeading"
      >
        <span
          style="cursor: pointer;"
        >
          <span
            class="css-swfxel-Faq"
          >
            <div
              class="codicon codicon-chevron-right"
            />
          </span>
           Why is it called npmbomb?
        </span>
      </h2>
      <div
        class="css-osfowl-Faq"
        style="display: none;"
      >
        It's a hommage to the word zip bomb. Wikipedia defines it as:
        <blockquote
          class="css-12z6zy1"
        >
          "A zip bomb is usually a small file .... however, when the file is unpacked, its contents are more than the system can handle."
        </blockquote>
        Sounds familiar? 😈
      </div>
    </div>
    <div
      class="css-v3jkj-Faq"
      tabindex="0"
    >
      <h2
        class="css-1f03z8l-FaqHeading"
      >
        <span
          style="cursor: pointer;"
        >
          <span
            class="css-swfxel-Faq"
          >
            <div
              class="codicon codicon-chevron-right"
            />
          </span>
           Does it count dev dependencies?
        </span>
      </h2>
      <div
        class="css-osfowl-Faq"
        style="display: none;"
      >
        No, it only shows (and counts) dependencies from the 
        <span
          class="css-rg74v9"
        >
          dependencies
        </span>
         field in the 
        <span
          class="css-rg74v9"
        >
          package.json
        </span>
         all the way to the very last dependency.
      </div>
    </div>
    <div
      class="css-v3jkj-Faq"
      tabindex="0"
    >
      <h2
        class="css-1f03z8l-FaqHeading"
      >
        <span
          style="cursor: pointer;"
        >
          <span
            class="css-swfxel-Faq"
          >
            <div
              class="codicon codicon-chevron-right"
            />
          </span>
           Why can't I find library XYZ?
        </span>
      </h2>
      <div
        class="css-osfowl-Faq"
        style="display: none;"
      >
        For now, it only shows a preselected number of libraries, namely the ones that are in the dependency tree of the most downloaded packages. If you want a specific dependency or have an idea or just want to chat in general, you can contact me on Twitter 
        <a
          class="css-1ka21sq"
          href="https://twitter.com/tmkndev"
          target="_blank"
        >
          @tmkndev
        </a>
      </div>
    </div>
    <div
      class="css-v3jkj-Faq"
      tabindex="0"
    >
      <h2
        class="css-1f03z8l-FaqHeading"
      >
        <span
          style="cursor: pointer;"
        >
          <span
            class="css-swfxel-Faq"
          >
            <div
              class="codicon codicon-chevron-right"
            />
          </span>
           Is it Open Source?
        </span>
      </h2>
      <div
        class="css-osfowl-Faq"
        style="display: none;"
      >
        <a
          class="css-1ka21sq"
          href="https://github.com/tmkn/npmbomb"
          target="_blank"
        >
          Yes
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Index /> matches snapshot 2`] = `
<DocumentFragment>
  <div
    class="css-8kvyam"
  >
    <h1>
      About
    </h1>
    <div
      class="css-1cwnpiq"
    >
      Test your knowledge of the NPM ecosystem by guessing the number of dependencies for popular NPM packages.
    </div>
    <div
      class="css-8a5j6a"
    >
      <button
        class="css-1w798tj"
      >
        Start
      </button>
    </div>
    <div
      class="css-khmwet"
      style="margin: 2rem 0px;"
    />
    <h2
      class="css-1f03z8l-FaqHeading"
    >
      FAQ
    </h2>
    <div
      class="css-v3jkj-Faq"
      tabindex="0"
    >
      <h2
        class="css-1f03z8l-FaqHeading"
      >
        <span
          style="cursor: pointer;"
        >
          <span
            class="css-swfxel-Faq"
          >
            <div
              class="codicon codicon-chevron-right"
            />
          </span>
           How is the dependency count calculated?
        </span>
      </h2>
      <div
        class="css-osfowl-Faq"
        style="display: none;"
      >
        As the dependency tree is traversed, each dependency from the dependencies field in the package.json is resolved according to their range and added to the overall count. 
        <span
          class="css-rg74v9"
        >
          It's a straight accumulation
        </span>
        , as such the same package is counted multiple times if it is a dependency of other packages.
      </div>
    </div>
    <div
      class="css-v3jkj-Faq"
      tabindex="0"
    >
      <h2
        class="css-1f03z8l-FaqHeading"
      >
        <span
          style="cursor: pointer;"
        >
          <span
            class="css-swfxel-Faq"
          >
            <div
              class="codicon codicon-chevron-right"
            />
          </span>
           How is the distinct dependency count calculated?
        </span>
      </h2>
      <div
        class="css-osfowl-Faq"
        style="display: none;"
      >
        A dependency is distinct if after resolving it according to their range differs in name and version.
        <br />
        <span
          class="css-rg74v9"
        >
          Multiple same version dependencies will only be counted once.
        </span>
      </div>
    </div>
    <div
      class="css-v3jkj-Faq"
      tabindex="0"
    >
      <h2
        class="css-1f03z8l-FaqHeading"
      >
        <span
          style="cursor: pointer;"
        >
          <span
            class="css-swfxel-Faq"
          >
            <div
              class="codicon codicon-chevron-right"
            />
          </span>
           Is there an overview page?
        </span>
      </h2>
      <div
        class="css-osfowl-Faq"
        style="display: none;"
      >
        All available packages can be found on the 
        <a
          class="css-1ka21sq"
          href="/overview"
          target="_blank"
        >
          overview page
        </a>
      </div>
    </div>
    <div
      class="css-v3jkj-Faq"
      tabindex="0"
    >
      <h2
        class="css-1f03z8l-FaqHeading"
      >
        <span
          style="cursor: pointer;"
        >
          <span
            class="css-swfxel-Faq"
          >
            <div
              class="codicon codicon-chevron-right"
            />
          </span>
           Why is it called npmbomb?
        </span>
      </h2>
      <div
        class="css-osfowl-Faq"
        style="display: none;"
      >
        It's a hommage to the word zip bomb. Wikipedia defines it as:
        <blockquote
          class="css-12z6zy1"
        >
          "A zip bomb is usually a small file .... however, when the file is unpacked, its contents are more than the system can handle."
        </blockquote>
        Sounds familiar? 😈
      </div>
    </div>
    <div
      class="css-v3jkj-Faq"
      tabindex="0"
    >
      <h2
        class="css-1f03z8l-FaqHeading"
      >
        <span
          style="cursor: pointer;"
        >
          <span
            class="css-swfxel-Faq"
          >
            <div
              class="codicon codicon-chevron-right"
            />
          </span>
           Does it count dev dependencies?
        </span>
      </h2>
      <div
        class="css-osfowl-Faq"
        style="display: none;"
      >
        No, it only shows (and counts) dependencies from the 
        <span
          class="css-rg74v9"
        >
          dependencies
        </span>
         field in the 
        <span
          class="css-rg74v9"
        >
          package.json
        </span>
         all the way to the very last dependency.
      </div>
    </div>
    <div
      class="css-v3jkj-Faq"
      tabindex="0"
    >
      <h2
        class="css-1f03z8l-FaqHeading"
      >
        <span
          style="cursor: pointer;"
        >
          <span
            class="css-swfxel-Faq"
          >
            <div
              class="codicon codicon-chevron-right"
            />
          </span>
           Why can't I find library XYZ?
        </span>
      </h2>
      <div
        class="css-osfowl-Faq"
        style="display: none;"
      >
        For now, it only shows a preselected number of libraries, namely the ones that are in the dependency tree of the most downloaded packages. If you want a specific dependency or have an idea or just want to chat in general, you can contact me on Twitter 
        <a
          class="css-1ka21sq"
          href="https://twitter.com/tmkndev"
          target="_blank"
        >
          @tmkndev
        </a>
      </div>
    </div>
    <div
      class="css-v3jkj-Faq"
      tabindex="0"
    >
      <h2
        class="css-1f03z8l-FaqHeading"
      >
        <span
          style="cursor: pointer;"
        >
          <span
            class="css-swfxel-Faq"
          >
            <div
              class="codicon codicon-chevron-right"
            />
          </span>
           Is it Open Source?
        </span>
      </h2>
      <div
        class="css-osfowl-Faq"
        style="display: none;"
      >
        <a
          class="css-1ka21sq"
          href="https://github.com/tmkn/npmbomb"
          target="_blank"
        >
          Yes
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Index /> matches snapshot 3`] = `
<DocumentFragment>
  <div
    class="css-8kvyam"
  >
    <h1>
      About
    </h1>
    <div
      class="css-1cwnpiq"
    >
      Test your knowledge of the NPM ecosystem by guessing the number of dependencies for popular NPM packages.
    </div>
    <div
      class="css-8a5j6a"
    >
      <button
        class="css-wndh17"
      >
        Start
      </button>
    </div>
    <div
      class="css-khmwet"
      style="margin: 2rem 0px;"
    />
    <h2
      class="css-1f03z8l-FaqHeading"
    >
      FAQ
    </h2>
    <div
      class="css-v3jkj-Faq"
      tabindex="0"
    >
      <h2
        class="css-1f03z8l-FaqHeading"
      >
        <span
          style="cursor: pointer;"
        >
          <span
            class="css-swfxel-Faq"
          >
            <div
              class="codicon codicon-chevron-right"
            />
          </span>
           How is the dependency count calculated?
        </span>
      </h2>
      <div
        class="css-osfowl-Faq"
        style="display: none;"
      >
        As the dependency tree is traversed, each dependency from the dependencies field in the package.json is resolved according to their range and added to the overall count. 
        <span
          class="css-rg74v9"
        >
          It's a straight accumulation
        </span>
        , as such the same package is counted multiple times if it is a dependency of other packages.
      </div>
    </div>
    <div
      class="css-v3jkj-Faq"
      tabindex="0"
    >
      <h2
        class="css-1f03z8l-FaqHeading"
      >
        <span
          style="cursor: pointer;"
        >
          <span
            class="css-swfxel-Faq"
          >
            <div
              class="codicon codicon-chevron-right"
            />
          </span>
           How is the distinct dependency count calculated?
        </span>
      </h2>
      <div
        class="css-osfowl-Faq"
        style="display: none;"
      >
        A dependency is distinct if after resolving it according to their range differs in name and version.
        <br />
        <span
          class="css-rg74v9"
        >
          Multiple same version dependencies will only be counted once.
        </span>
      </div>
    </div>
    <div
      class="css-v3jkj-Faq"
      tabindex="0"
    >
      <h2
        class="css-1f03z8l-FaqHeading"
      >
        <span
          style="cursor: pointer;"
        >
          <span
            class="css-swfxel-Faq"
          >
            <div
              class="codicon codicon-chevron-right"
            />
          </span>
           Is there an overview page?
        </span>
      </h2>
      <div
        class="css-osfowl-Faq"
        style="display: none;"
      >
        All available packages can be found on the 
        <a
          class="css-1ka21sq"
          href="/overview"
          target="_blank"
        >
          overview page
        </a>
      </div>
    </div>
    <div
      class="css-v3jkj-Faq"
      tabindex="0"
    >
      <h2
        class="css-1f03z8l-FaqHeading"
      >
        <span
          style="cursor: pointer;"
        >
          <span
            class="css-swfxel-Faq"
          >
            <div
              class="codicon codicon-chevron-right"
            />
          </span>
           Why is it called npmbomb?
        </span>
      </h2>
      <div
        class="css-osfowl-Faq"
        style="display: none;"
      >
        It's a hommage to the word zip bomb. Wikipedia defines it as:
        <blockquote
          class="css-12z6zy1"
        >
          "A zip bomb is usually a small file .... however, when the file is unpacked, its contents are more than the system can handle."
        </blockquote>
        Sounds familiar? 😈
      </div>
    </div>
    <div
      class="css-v3jkj-Faq"
      tabindex="0"
    >
      <h2
        class="css-1f03z8l-FaqHeading"
      >
        <span
          style="cursor: pointer;"
        >
          <span
            class="css-swfxel-Faq"
          >
            <div
              class="codicon codicon-chevron-right"
            />
          </span>
           Does it count dev dependencies?
        </span>
      </h2>
      <div
        class="css-osfowl-Faq"
        style="display: none;"
      >
        No, it only shows (and counts) dependencies from the 
        <span
          class="css-rg74v9"
        >
          dependencies
        </span>
         field in the 
        <span
          class="css-rg74v9"
        >
          package.json
        </span>
         all the way to the very last dependency.
      </div>
    </div>
    <div
      class="css-v3jkj-Faq"
      tabindex="0"
    >
      <h2
        class="css-1f03z8l-FaqHeading"
      >
        <span
          style="cursor: pointer;"
        >
          <span
            class="css-swfxel-Faq"
          >
            <div
              class="codicon codicon-chevron-right"
            />
          </span>
           Why can't I find library XYZ?
        </span>
      </h2>
      <div
        class="css-osfowl-Faq"
        style="display: none;"
      >
        For now, it only shows a preselected number of libraries, namely the ones that are in the dependency tree of the most downloaded packages. If you want a specific dependency or have an idea or just want to chat in general, you can contact me on Twitter 
        <a
          class="css-1ka21sq"
          href="https://twitter.com/tmkndev"
          target="_blank"
        >
          @tmkndev
        </a>
      </div>
    </div>
    <div
      class="css-v3jkj-Faq"
      tabindex="0"
    >
      <h2
        class="css-1f03z8l-FaqHeading"
      >
        <span
          style="cursor: pointer;"
        >
          <span
            class="css-swfxel-Faq"
          >
            <div
              class="codicon codicon-chevron-right"
            />
          </span>
           Is it Open Source?
        </span>
      </h2>
      <div
        class="css-osfowl-Faq"
        style="display: none;"
      >
        <a
          class="css-1ka21sq"
          href="https://github.com/tmkn/npmbomb"
          target="_blank"
        >
          Yes
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
